<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical"
    android:background="#436EEE"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/btn_mf0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/btn_pad"
            android:text="@string/btn_mf0" />

        <Button
            android:id="@+id/btn_mf1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/btn_pad"
            android:text="@string/btn_mf1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/btn_e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/btn_pad"
            android:text="@string/btn_e_wallet" />

        <Button
            android:id="@+id/btn_manage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/btn_pad"
            android:text="@string/btn_manage" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/btn_mf3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/btn_pad"
            android:text="@string/btn_mf3" />

    </LinearLayout>

</LinearLayout>