<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#436EEE"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/btn_pad"
                android:text="@string/btn_active"
                android:background="#ff0000"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/btn_pad"
                android:text="@string/btn_balance"
                 android:background="#FF8C00"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_charge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/btn_pad"
                android:text="@string/btn_charge"
                android:background="#FFFF00"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/btn_pad"
                android:text="@string/btn_payment"
                android:background="#1C86EE"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>