<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#436EEE"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.goodcom.gcprinterdemo.NFC_Test_Activity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/read_view_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tips"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_write_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="78dp"
            android:padding="@dimen/btn_pad"
            android:text="@string/write_tag" />

        <Button
            android:id="@+id/btn_read_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="47dp"
            android:padding="@dimen/btn_pad"
            android:text="@string/read_tag" />
    </LinearLayout>

</RelativeLayout>