<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#436EEE"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.goodcom.gcprinterdemo.NFC_Write" >

    <EditText
        android:id="@+id/writeBlocks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignRight="@+id/write_text"
        android:layout_marginRight="14dp"
        android:background="@drawable/border_write_s"
        android:inputType="number"
        android:ems="2" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/write_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="@drawable/border_write"
        android:ems="10" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/writeBlocks"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/write_tips"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/read_view_top2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/write_tag_tips"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:text="@string/Block"
        android:textSize="@dimen/F26" />

    <EditText
        android:id="@+id/startBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/writeBlocks"
        android:layout_below="@+id/read_view_top2"
        android:layout_marginTop="14dp"
        android:background="@drawable/border_write_s"
        android:inputType="number"
        android:ems="2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startBlock"
        android:layout_marginRight="29dp"
        android:layout_marginTop="34dp"
        android:layout_toLeftOf="@+id/writeBlocks"
        android:text="@string/wBlock"
        android:textSize="@dimen/F26" />



</RelativeLayout>