<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#436EEE"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.goodcom.gcprinterdemo.NFC_Read" >

    <TextView
        android:id="@+id/read_view_top2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="44dp"
        android:text="@string/read_tag_tips"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical" >
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/startBlock"
        android:layout_alignBottom="@+id/startBlock"
        android:layout_alignLeft="@+id/read_view_top2"
        android:text="@string/Block"
        android:textSize="@dimen/F26" />

    <EditText
        android:id="@+id/startBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/read_view_top2"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="41dp"
        android:layout_toRightOf="@+id/textView1"
        android:background="@drawable/border_write_s"
        android:ems="2"
        android:inputType="number" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/startBlock"
        android:layout_marginTop="32dp"
        android:text="@string/rBlock"
        android:textSize="@dimen/F26" />

    <EditText
        android:id="@+id/readBlocks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startBlock"
        android:layout_alignBottom="@+id/TextView01"
        android:background="@drawable/border_write_s"
        android:ems="2"
        android:inputType="number" />

    <EditText
        android:id="@+id/nfc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView01"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:background="@drawable/border_write"
        android:ems="10" >

        <requestFocus />
    </EditText>

</RelativeLayout>